@@ -46,7 +46,7 @@
         <kc.context.path>/kc-${build.environment}</kc.context.path>
         <kc.port>8080</kc.port>
         <jetty.context.file>${basedir}/src/main/webapp/WEB-INF/jetty-web.xml</jetty.context.file>
-	<jetty.memOpts>-Xmx1536m -XX:MaxPermSize=512m</jetty.memOpts>
+	<jetty.memOpts>-Xmx1536m</jetty.memOpts>
         <jetty.argLine>${jetty.memOpts} ${javaagent.arg}</jetty.argLine>
 
         <generated.web.sources>${project.build.directory}/generated-web-sources</generated.web.sources>
